Fixed ion-content and header overlap

--- a/PadelWebIonic/src/styles.css
+++ b/PadelWebIonic/src/styles.css
@@ -605,3 +605,8 @@ aside.content-section {
 .main-container {
   height: 100%;
 }
+
+.margin-top {
+  position: absolute;
+  top: 50px;
+}
